Revisions to Challenges section

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -115,42 +115,43 @@ In addition to identifying key capabilities of blockchain technologies, we also 
 
 %\paragraph{Scalability of public blockchains: transaction costs and bandwidth, emergent centralization, and energy consumption}
 \subsection{Blockchain scalability and performance}
-As blockchain-based systems such as Bitcoin have grown, the increased number of transactions and users have raised questions about the scalability, cost, and performance of such systems.  Many of the documents we coded point out that blockchain is \emph{not a high performance system} and that its decentralized governance and operation results in an inefficient use of resources.  In particular, most of today's permissionless blockchains are based on proof-of-work style consensus in which consensus is achieved by having miners solve computationally difficult puzzles to extend the blockchain.  This has led to the proliferation of power-hungry specialized hardware devices dedicated to solving these computational puzzles.  According to one estimate\cite{Digiconomist}, as of April 2018 the energy consumed by Bitcoin miners was equivalent to the power usage of almost 5.5 million US households, and all signs indicate that it will continue to grow.
+As usage of Blockchain applications such as Bitcoin has grown, questions have been raised about their scalability, cost, and performance. Many documents in our corpus point out that blockchain is \emph{not a high performance system} and that its decentralized governance and operation result in an inefficient use of resources.  In particular, most of today's permissionless blockchains are based on proof-of-work style consensus in which consensus is achieved by having miners solve computationally difficult puzzles. This has led to the proliferation of power-hungry specialized hardware devices dedicated to solving these computational puzzles. An estimate in April 2018 found that the energy consumed by Bitcoin miners was equivalent to the power usage of almost 5.5 million US households~\cite{Digiconomist}, and all signs indicate that it will continue to grow.
 
-Another unintended consequence of proof-of-work blockchains is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members.  Currently, almost 70\% of Bitcoin blocks are mined by the five largest mining pools \cite{BlockchainInfoPools} significantly limiting the actual decentralization achieved by Bitcoin~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and may violate security notions that depend on decentralization.  
+Another unintended consequence of proof-of-work blockchains is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members.  Currently almost 70\% of Bitcoin blocks are mined by the five largest mining pools~\cite{BlockchainInfoPools}, inhibiting decentralization~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and it may violate security notions that depend on decentralization.  
 
-Additionally, many design choices limit the performance of blockchain systems.  Small block sizes can lead to extremely high transaction fees when miners are unwilling to add transactions that result in having to create more blocks.  On the other hand, larger block sizes can impede the throughput of many blockchains due to the increased latency of finalizing a transaction.  In particular, in systems such as Bitcoin one must wait for six additional blocks to be confirmed before a transaction is considered final, which may be prohibitively long for applications where transactions need to clear immediately.  These challenges of handling a huge number of transactions while achieving acceptable levels of throughput and latency remain a critical hurdle to the use of blockchain solutions in performance sensitive systems.
+Additionally, many design choices limit the performance of Blockchain systems.  Small block sizes can lead to extremely high transaction fees when miners are unwilling to add transactions that result in having to create more blocks.  On the other hand, larger block sizes can impede  throughput due to the increased latency of finalizing a transaction. In Bitcoin, one must wait for six additional blocks to be confirmed before a transaction is considered final, which may be prohibitively long for applications where transactions need to clear immediately. The challenge of handling a huge number of transactions while achieving acceptable levels of throughput and latency remains a critical hurdle to the use of Blockchain solutions in performance-critical systems.
 
 \subsection{Blockchain correctness and dealing with errors}
-Despite best efforts to eliminate mistakes, a payment or asset transfer system must be able to reverse fraudulent or errant transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully to avoid introducing new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoin refund mechanism~\cite{FC:MccShaHao16} necessitating further research to design secure refunds in Bitcoin~\cite{arxiv:AviSafSha18}.
+A payment or asset transfer system must be able to reverse fraudulent or errant transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully to avoid introducing new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoin refund mechanism~\cite{FC:MccShaHao16} necessitating further research to design secure refunds~\cite{arxiv:AviSafSha18}.
 
-This issue of correctness is further exacerbated by smart contracts, i.e., pieces of executable code that can be executed on the blockchain.  All executable code is subject to bugs: developer errors that can be taken advantage of to hijack program logic. This problem manifests in smart contracts, and when those contracts control the transference of valuable assets, the impact of a bug can be devastating. The immutability of blockchains exacerbates this challenge by impeding rollback of state changes, even those that are clearly malicious. This is because, by definition, any transactions on a blockchain upon which consensus is reached are considered legal - including ones due to buggy code and exploitations of such. If ``code is law'', as claimed by a blockchain-based investment fund called the Decentralized Autonomous Organization (DAO), then so are bugs.  Moreover, the lack of tools for checking correctness of smart contracts before they are deployed significantly increases the likelihood of such bugs.  The risk of such bugs was made plainly clear in June 2016, when a bug in the DAO smart contract allowed an attacker to steal about \$80m.
+Correctness is also a challenge in smart contracts. The impact of a bug in a contract can be devastating what that contract controls the transference of valuable assets, and the immutability of Blockchain exacerbates this challenge by impeding rollback of state changes. This is because by definition, any transactions on a blockchain upon which consensus is reached are considered legal - including those due to buggy code and exploitations of such. If ``code is law'', as claimed by a blockchain-based investment fund called the Decentralized Autonomous Organization (DAO), then so are bugs.  Moreover, the lack of tools for checking correctness of smart contracts before they are deployed significantly increases the likelihood of such bugs.  The risk of such bugs was made plainly clear in June 2016, when a bug in the DAO smart contract allowed an attacker to steal about \$80m.
 
-A final challenge to the correctness of blockchain-based application is ensuring consistency between the on-chain state and the off-chain objects or state that it represents.  When a blockchain is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by digital tokens. When dealing with digital assets, correspondence between the asset and its token can generally be maintained by code; for example, a smart contract can track transference of ownership for a digital media license. For physical assets, however, maintaining this consistency is a challenge. Real-world processes must be employed to ensure that whenever an asset's state or ownership is modified, the corresponding token is updated. These processes are an obvious point of failure as they rely on correct enforcement by trusted parties. The person in charge of maintaining the blockchain could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario). The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, freeing the token to be attached to an invalid asset (e.g., fake goods in luxury markets).
+A final challenge to the correctness of Blockchain application is ensuring consistency between on-chain state and the off-chain objects or state that it represents.  When a blockchain is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by digital tokens. When dealing with digital assets, correspondence between the asset and its token can generally be maintained by code; for example, a smart contract can track transference of ownership for a digital media license. For physical assets, however, maintaining this consistency is a challenge. Real-world processes must be employed to ensure that whenever an asset's state or ownership is modified, the corresponding token is updated. These processes are an obvious point of failure as they rely on correct enforcement by trusted parties. The person in charge of maintaining the blockchain could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario). The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, freeing the token to be attached to an invalid asset (e.g., fake goods in luxury markets).
 
-Another related issue arises when blockchain processes and smart contracts need to use off-chain inputs.  For example, gambling contracts may determine which address to pay winnings to based on the result of some oracle request (e.g., sports scores, stock prices, weather forecasts, or other global events). If contract logic branches based on the response from an off-chain oracle, that contract is no longer verifiable after the fact because auditors cannot confirm that the response received from the oracle at audit time is the same response received when the contract was executed. There are legitimate reasons why an oracle response might change with time, so this is really an inherent limitation of Blockchain technology: smart contracts cannot "see" external events.  Thus, additional mechanisms are needed to verify that these inputs cannot be forged.
+Another related issue arises when Blockchain processes and smart contracts need to use off-chain inputs.  For example, gambling contracts may determine which address to pay winnings to based on the result of a request to an off-chain oracle (e.g., sports scores, stock prices, weather forecasts, or other global events). If contract logic branches based on that response, the contract is no longer verifiable because auditors cannot confirm that the response received from the oracle at audit time is the same response received when the contract was executed. There are legitimate reasons why an oracle response might change with time, so this is really an inherent limitation of Blockchain technology: smart contracts cannot "see" external events.  Thus, additional mechanisms are needed to verify that these inputs cannot be forged.
 
-\subsection{Security issues of blockchain}
-Due to its decentralized nature, blockchain is also potentially vulnerable to a number of security threats.  First, coordinated attacks by a majority (and often even a large minority) of the miners can reorder, remove, and change transactions from the blockchain thus destroying all guarantees that the blockchain provides.  Thus, it is critical that blockchain-based solutions provide the proper incentives to keep the miners honest.  In particular, it is critical to design incentives such that the Nash equlibrium behavior for selfish miners is to honestly maintain the state of the blockchain rather than to destroy it through forming such coalitions.
+\subsection{Security issues of Blockchain}
+Due to its decentralized nature, Blockchain is potentially vulnerable to a number of security threats.  First, coordinated attacks by a majority (or often even a large minority) of the miners can reorder, remove, and change transactions from the blockchain.Thus, it is critical that Blockchain applications provide the proper incentives to keep miners honest.  In particular, it is critical to design incentives such that the Nash equlibrium behavior for selfish miners is to honestly maintain the state of the blockchain rather than to destroy it through forming such coalitions.
 
-Additionally, blockchain solutions are potentially vulnerable to traditional network attacks such as denial of service.  Such attacks can aim to bring down a fraction of the mining power, or to partition the network of miners to try to achieve an inconsistent state.  Thus, blockchain solutions must be able to recover to a valid state even after such a denial of service attack.
+Additionally, Blockchain applications are potentially vulnerable to traditional network attacks such as denial of service or partitioning.  Such attacks can aim to bring down a fraction of the mining power or to fracture the network of miners to create an inconsistent state.  Thus, Blockchain applications must be able to recover to a valid state even after such a denial of service attack.
 \anote{Not sure what security of infrastructure -- is this key management?, and subversion of software security measures means.}
 
-\subsection{Privacy and anopnymity on the blockchain}
-Another major challenge for blockchain applications is how to protect the privacy of the users and data stored on the blockchain.  By design, all data on the blockchain is public to enable verification by all miners.  But, this means that any sensitive data placed (in the clear) on the blockchain is inherently non-private.  Cryptographic approaches such as encryption and zero-knowledge proofs are needed\anote{Add citations} to protect the privacy of such data.
+\subsection{Privacy and anonymity}
+Another major challenge is how to protect the privacy of the users and data stored on a blockchain.  By design, all data on a blockchain is public to enable verification by all miners.  But this means that any sensitive data is inherently non-private.  Cryptographic approaches such as encryption and zero-knowledge proofs are needed\anote{Add citations} to protect the privacy of such data.
 
-Moreover, if one wishes to hide the parties participating in a transaction recorded on the blockchain, it is not enough to hide the transaction information.  It is also necessary to protect the anonymity of these parties by hiding the fact that they connected to the blockchain in the first place.  While most blockchains provide a notion of ``pseudonymity'', users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with access histories can deanonymize blockchain transactions\anote{Add citations}.
+Moreover, if one wishes to hide the parties participating in a transaction recorded on a blockchain, it is not enough to hide the transaction information.  It is also necessary to protect the anonymity of these parties by hiding the fact that they connected to the blockchain in the first place.  While most blockchains provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with access histories can deanonymize blockchain transactions\anote{Add citations}.
 
 \subsection{Usability of blockchain tools}
-Yet another important challenge that arises when building applications on top of blockchain technology is the lack of development and blockchain analysis tools.  Currently, there are no universal tools available for creating transactions and smart contracts for many of the existing blockchains, this is even more true if we want tools that can be used across multiple blockchains.  As mentioned earlier, the lack of smart contract development and testing tools makes the chance of critical bugs higher.  Additionally, there is a lack of testing support and infrastructure to test out one's applications (for correctness, performance, and security) before deploying it on the blockchain.  Additionally, many of the blockchains are currently geared towards expert users and lack the user experience focused tools needed to allow for easier use by non-experts.
+Yet another important challenge that arises when building applications on top of Blockchain is the lack of development and analysis tools.  %Currently there are no universal tools available for creating transactions and smart contracts for many of the existing blockchains, this is even more true if we want tools that can be used across multiple blockchains. - \bnote{I'm not sure this is true -- there are IDEs emerging for some smart contract languages now, like Solidity.}
+As mentioned earlier, the lack of smart contract development and testing tools increases the chance of critical bugs.  Additionally, there is a lack of testing support and infrastructure to test out one's applications (for correctness, performance, and security) before deploying them. Many blockchains are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
 
-Additionally, a much touted capability of blockchain is the auditability of all transactions on the blockchain.  However, there is no external API to allow an auditor access to a blockchain on which she is not a miner.  Thus, auditors are forced to run full mining nodes just to audit the blockchain. 
+Additionally, a much touted capability of blockchain is the auditability of all transactions.  However, there is no external API to allow an auditor access to a blockchain on which she is not a miner.  Thus, auditors are forced to run full mining nodes just to audit the blockchain. 
 
 \subsection{Key management challenges}
-Another major challenge of blockchain is that it requires users to store, manage, and secure cryptographic keys both to certify their own transactions and to verify transactions of others.  However, the challenges of maintaining and protecting such key repositories are well documented (see, e.g.~\cite{uss:WhiTyg99}).  A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But, as the authors state all of these solutions have their drawbacks.
+Another major challenge of blockchain is that it requires users to store, manage, and secure cryptographic keys both to certify their own transactions and to verify transactions of others.  However, the challenges of maintaining and protecting such key repositories are well documented (see, e.g.~\cite{uss:WhiTyg99}).  A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
 
 \subsection{Necessity of blockchain}
-Finally, before a company chooses to deploy a blockchain-based application it should carefully consider whether blockchain is the right tool for the job.  Due to the hype around this technology many solutions have turned to blockchain when other more established technologies such as traditional databases would do the job just fine.  For example, in situations when a centralized repository is easily available, it is likely to be preferable to a blockchain.  In fact there are relatively few use-cases where blockchain is demonstratively the ``right'' solution.  While we believe that more such use-cases will be identified, when evaluating a new use-case, it is important to make sure the blockchain is really needed and that a lower-overhead solution will not suffice.
+Finally, before a company chooses to deploy Blockchain it should carefully consider whether it is the right tool for the job.  Due to the hype around this technology many solutions have turned to Blockchain when other, more established technologies such as traditional databases would do the job. For example, in situations when a centralized repository is easily available, it is likely to be preferable to a blockchain.  In fact there are relatively few use cases where blockchain is demonstratively the ``right'' solution.  While we believe that more such use cases will be identified, when evaluating a new use case it is important to make sure that Blockchain is really needed and that a lower-overhead solution will not suffice.
 %\subsubsection{Power consumption and centralization of mining}
 
 %To reduce the power consumption of Blockchain, there have been several proposals to turn to other consensus mechanisms that do not rely on proofs of work.  The most popular of these proposals is proof of stake consensus, where parties' contribution to the consensus protocol is proportional to the total amount of stake they own in the system rather than the amount of work that they do.  This allows consensus to be achieved without relying on wasteful proofs of work.  Today's proof of stake protocols (e.g.~\cite{FC:BenGabMiz16,eprint:BenPasShi16,CRYPTO:KRDO17,SOSP:GHMVZ17}) vary significantly in their model, assumptions, and performance guarantees.  Other suggestions for avoiding proofs of work include proof of space~\cite{CRYPTO:DFKP15, eprint:PPKAFG15} where miners use storage instead of computation, and proof of elapsed time~\cite{SSS:CXSGLS17} where trusted hardware (i.e., Intel SGX) is used in place of proofs of work.  It is not clear at this point which solution will be best suited for different blockchain deployments.  
