--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -147,6 +147,9 @@ As mentioned earlier, the lack of smart contract development and testing tools i
 
 Additionally, a much touted capability of blockchain is the auditability of all transactions.  However, there is no external API to allow an auditor access to a blockchain on which she is not a miner.  Thus, auditors are forced to run full mining nodes just to audit the blockchain. 
 
+
+% Jeremy: I see the below as usability challenges and can be merged there.
+
 \subsection{Key management challenges}
 Another major challenge of blockchain is that it requires users to store, manage, and secure cryptographic keys both to certify their own transactions and to verify transactions of others.  However, the challenges of maintaining and protecting such key repositories are well documented (see, e.g.~\cite{uss:WhiTyg99}).  A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
 
@@ -272,8 +275,18 @@ Finally, before a company chooses to deploy Blockchain it should carefully consi
 %
 %Some recent work has also looked into cryptographic solutions to protect users' keys.  Techniques based on secure multi-party computation (MPC)~\cite{CCS:LinNof18,C:Lindell17} allow transactions to be signed without any party ever having access to the secret key.  Alternatively, the classic technique of threshold signatures (e.g.~\cite{PKC:Boldyreva03,EC:GJKR96,EC:Shoup00a}) allow users to split their keys into many pieces such that a large number of them must be compromised in order to ``steal'' a user's key.  However, much work remains to secure all the cryptographic keys inherent in real-world blockchain deployments.
 
-\subsection{Regulation}
-As applications of blockchain technology proliferate, they have drawn significant attention from the regulatory bodies around the world.  In the settings of cryptocurrencies, a number of concerns such as the prevalence of black-market transactions, tax evasion, money laundering, and terrorist financing have drawn calls to regulate how such cryptocurrencies can be used.  An excellent review article by Kiviat~\cite{Kiviat15} outlines some of the issues that arise in regulating blockchain transactions.  Additionally, as blockchain applications move to greater support of smart contracts, researchers have shown that criminal smart contracts are easily implementable in today's smart contract platforms~\cite{CCS:JueKosShi16} requiring regulation to avoid such criminal uses of blockchain.  
+\subsection{Legality and Regulation}
 
-Another regulatory issue that has recently come to light is whether blockchain technology is compatible with European Union's General Data Protection Regulation (GDPR) that has recently been put into law in the EU.  GDPR requires that individuals have the ``right to be forgotten'', i.e., that they should be able to expunge outdated or invalid information about themselves from available records.  However, since any data stored on a blockchain is immutable, this seems to pose a challenge for GDPR compliance.  Much research within the technical and regulatory communities is needed to ensure that blockchain can comply with existing regulation and to prevent the many nefarious uses of this technology.
+Our analysis revealed wide-spread concern with regulatory issues surrounding cryptocurrencies, blockchain-based assets, and other blockchain applications. It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations. Therefore there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians. In most countries, each of these already broad categories are administered by different government branches. Countries like the United States and Canada may require licensing or registration, and have taken enforcement action against non-compliant firms.
+
+An extreme case of regulation is prohibition of cryptocurrencies or blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
+ 
+ 
+%As applications of blockchain technology proliferate, they have drawn significant attention from the regulatory bodies around the world.  In the settings of cryptocurrencies, a number of concerns such as the prevalence of black-market transactions, tax evasion, money laundering, and terrorist financing have drawn calls to regulate how such cryptocurrencies can be used.  An excellent review article by Kiviat~\cite{Kiviat15} outlines some of the issues that arise in regulating blockchain transactions.  
+
+% Jeremy: I like this paper but it is a bit esoteric to real world concerns:
+%Additionally, as blockchain applications move to greater support of smart contracts, researchers have shown that criminal smart contracts are easily implementable in today's smart contract platforms~\cite{CCS:JueKosShi16} requiring regulation to avoid such criminal uses of blockchain.  
+
+% Jeremy: This is too speculative in my opinion and there is enough to talk about otherwise:
+%Another regulatory issue that has recently come to light is whether blockchain technology is compatible with European Union's General Data Protection Regulation (GDPR) that has recently been put into law in the EU.  GDPR requires that individuals have the ``right to be forgotten'', i.e., that they should be able to expunge outdated or invalid information about themselves from available records.  However, since any data stored on a blockchain is immutable, this seems to pose a challenge for GDPR compliance.  Much research within the technical and regulatory communities is needed to ensure that blockchain can comply with existing regulation and to prevent the many nefarious uses of this technology.
 
