--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -141,17 +141,20 @@ Another major challenge is how to protect the privacy of the users and data stor
 
 Moreover, if one wishes to hide the parties participating in a transaction recorded on a blockchain, it is not enough to hide the transaction information.  It is also necessary to protect the anonymity of these parties by hiding the fact that they connected to the blockchain in the first place.  While most blockchains provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with access histories can deanonymize blockchain transactions\anote{Add citations}.
 
-\subsection{Usability of blockchain tools}
-Yet another important challenge that arises when building applications on top of Blockchain is the lack of development and analysis tools.  %Currently there are no universal tools available for creating transactions and smart contracts for many of the existing blockchains, this is even more true if we want tools that can be used across multiple blockchains. - \bnote{I'm not sure this is true -- there are IDEs emerging for some smart contract languages now, like Solidity.}
-As mentioned earlier, the lack of smart contract development and testing tools increases the chance of critical bugs.  Additionally, there is a lack of testing support and infrastructure to test out one's applications (for correctness, performance, and security) before deploying them. Many blockchains are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
+\subsection{User Experience}
 
-Additionally, a much touted capability of blockchain is the auditability of all transactions.  However, there is no external API to allow an auditor access to a blockchain on which she is not a miner.  Thus, auditors are forced to run full mining nodes just to audit the blockchain. 
+The requirement for blockchain users to store, manage, and secure cryptographic keys is a major challenge. Key management is needed to certify users' own transactions, as well as to verify the transactions of others.  The challenges of maintaining and protecting key repositories are well documented in other areas of cryptography (see, e.g.~\cite{uss:WhiTyg99} for secure email). A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin. They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
 
+With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
-% Jeremy: I see the below as usability challenges and can be merged there.
+% Jeremy: I toned this waaaaaay down. Ethereum has excellent tools now: linters, debuggers, static analysis tools. Even the etheruem wallet can compile and do basic debugging of Solidity code. However, beyond Ethereum things get messy and so that is the new point. 
+For developers, development and analysis tools are critical to building secure applications in any domain, including blockchain. The availability of user-friendly developer tools varies significantly depending on the maturity of the target blockchain. Some projects, like Ethereum have mature tools, while others have very little support. Many blockchains are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
+
+ 
+%Yet another important challenge that arises when building applications on top of Blockchain is the lack of development and analysis tools.  %Currently there are no universal tools available for creating transactions and smart contracts for many of the existing blockchains, this is even more true if we want tools that can be used across multiple blockchains. - \bnote{I'm not sure this is true -- there are IDEs emerging for some smart contract languages now, like Solidity.}
+%As mentioned earlier, the lack of smart contract development and testing tools increases the chance of critical bugs.  Additionally, there is a lack of testing support and infrastructure to test out one's applications (for correctness, performance, and security) before deploying them. 
 
 \subsection{Key management challenges}
-Another major challenge of blockchain is that it requires users to store, manage, and secure cryptographic keys both to certify their own transactions and to verify transactions of others.  However, the challenges of maintaining and protecting such key repositories are well documented (see, e.g.~\cite{uss:WhiTyg99}).  A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
 
 \subsection{Necessity of blockchain}
 Finally, before a company chooses to deploy Blockchain it should carefully consider whether it is the right tool for the job.  Due to the hype around this technology many solutions have turned to Blockchain when other, more established technologies such as traditional databases would do the job. For example, in situations when a centralized repository is easily available, it is likely to be preferable to a blockchain.  In fact there are relatively few use cases where blockchain is demonstratively the ``right'' solution.  While we believe that more such use cases will be identified, when evaluating a new use case it is important to make sure that Blockchain is really needed and that a lower-overhead solution will not suffice.
